append cells on gameField

--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mineswipper</title>
-</head>
-<body>
-    <script src="main.js"></script>
-</body>
+<html>
+    <head>
+        <meta lang="en">
+        <meta charset="utf-8">
+        <title>Mineswipper</title>
+        <link rel="shortcut icon" href="/bomb.ico">
+        <link rel="stylesheet" href="/style.css">
+
+    </head>
+
+    <body class="container">
+        <h1>Сапёр</h1>
+        <div style="width: 100%; height: 1px; background: black;"></div>
+
+
+        <div class="gameField">
+
+        </div>
+        <script src="/main.js"></script>
+    </body>
 </html>
