crete functions (getMatrix, get(Around)Cell, getRandomEmptyCell, jsTOhtml, getRandomBomb

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div style="width: 100%; height: 1px; background: black;"></div>
 
 
-        <div class="gameField">
+        <div id="general"></div>
 
-        </div>
+        <script src="/sourse.js"></script>
         <script src="/main.js"></script>
     </body>
 </html>
