--- a/index.html
+++ b/index.html
@@ -11,11 +11,22 @@
 
     <body class="container">
         <h1>Сапёр</h1>
+        
+
+
         <div style="width: 100%; height: 1px; background: black;"></div>
 
+        <p>Введите количество бомб</p>
+        <input type="text" value="" id="countBomb">
+
+        <p>Размерность игрового поля</p>
+        <input type="number" id="sizeField">
+
+        <p>Отобразить поле</p>
+        <button id="showField" onclick="letsGo()">Отобразить</button>
 
         <div id="general"></div>
-
+        
         <script src="/sourse.js"></script>
         <script src="/main.js"></script>
     </body>
