--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta lang="en">
     <meta charset="utf-8">
     <title>Mineswipper</title>
-    <link rel="shortcut icon" href="/bomb.ico">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="bomb.ico">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -39,8 +39,8 @@
 
     <div id="general"></div>
 
-    <script src="/sourse.js"></script>
-    <script src="/main.js"></script>
+    <script src="sourse.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
